# multigit

./: LICENSE  multigit.py  pyproject.toml
